grafana/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  namespace: monitoring
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana-service
          servicePort: 3000
